Added all the projects I have done in my portfolio

--- a/index.html
+++ b/index.html
@@ -394,48 +394,18 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up">
             <div class="card review">
               <div class="card-body">
-                <img src="assets/img/northwind.jpg" alt="" height="300px" width="300px">
-                <h4 class="title img_space"><a href="">Northwind Shipping Analytics</a></h4>
-                <button class="btn btn-primary see_more" type="submit"><a href="https://public.tableau.com/app/profile/sayam.kumar3450/viz/NorthwindShippingAnalytics_16260869195490/Dashboard1" class="submit"><b>Review</b></a></button>
+                <img src="assets/img/Customer.png" alt="" height="300px" width="300px">
+                <h4 class="title img_space"><a href="">Customer Churn Predictions</a></h4>
+                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/Tshepo-Elifa-Serumula/Codsoft/tree/master/Task_3-Customer-Churn-Predictions" class="submit"><b>Review</b></a></button>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-aos="fade-up">
             <div class="card review">
               <div class="card-body">
-                <img src="assets/img/tesla_stock_price.png" alt="" height="300px" width="300px">
-                <h4 class="title img_space"><a href="">Tesla Stock Price Analytics</a></h4>
-                <button class="btn btn-primary see_more" type="submit"><a href="https://public.tableau.com/app/profile/sayam.kumar3450/viz/TeslaStockPriceAnalytics_16260917432450/Dashboard1" class="submit"><b>Review</b></a></button>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-4 col-md-6" data-aos="fade-up">
-            <div class="card review">
-              <div class="card-body">
-                <img src="assets/img/green_destinations.png" alt="" height="300px" width="300px">
-                <h4 class="title img_space"><a href="">Green Destinations HR Analytics</a></h4>
-                <button class="btn btn-primary see_more" type="submit"><a href="https://public.tableau.com/app/profile/sayam.kumar3450/viz/HRAnalyticsGreenDestinations_16259196011380/Dashboard1" class="submit"><b>Review</b></a></button>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6" data-aos="fade-up">
-            <div class="card review">
-              <div class="card-body">
-                <img src="assets/img/discount_mart.png" alt="" height="300px" width="300px">
-                <h4 class="title img_space"><a href="">Discount Mart Sales Analytics</a></h4>
-                <button class="btn btn-primary see_more" type="submit"><a href="https://public.tableau.com/app/profile/sayam.kumar3450/viz/DiscountMartSalesAnalytics_16259078066490/Dashboard1" class="submit"><b>Review</b></a></button>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6" data-aos="fade-up">
-            <div class="card review">
-              <div class="card-body">
-                <img src="assets/img/superstore.png" alt="" height="300px" width="300px">
-                <h4 class="title img_space"><a href="">Super Store Sales Agent Analytics</a></h4>
-                <button class="btn btn-primary see_more" type="submit"><a href="https://public.tableau.com/app/profile/sayam.kumar3450/viz/SuperStoreSalesAgentAnalytics_16260184626340/Dashboard1" class="submit"><b>Review</b></a></button>
+                <img src="assets/img/Sms.png" alt="" height="300px" width="300px">
+                <h4 class="title img_space"><a href="">Spam SMS Detection</a></h4>
+                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/Tshepo-Elifa-Serumula/Codsoft/tree/master/Task_4-Span-SMS-Detection" class="submit"><b>Review</b></a></button>
               </div>
             </div>
           </div>
@@ -445,57 +415,27 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up">
             <div class="card review">
               <div class="card-body">
-                <img src="assets/img/adventure_works.png" alt="" height="300px" width="300px">
-                <h4 class="title img_space"><a href="">Adventure Works Sales Analytics</a></h4>
-                <button class="btn btn-primary see_more" type="submit"><a href="https://app.powerbi.com/links/Z9-4xr4ghr?ctid=37fd5b81-9457-4d9c-b98d-4870504edf8a&pbi_source=linkShare&bookmarkGuid=4dce3bc3-76fd-4911-8af9-6b66df2514ac" class="submit"><b>Review</b></a></button>
+                <img src="assets/img/Salary.png" alt="" height="300px" width="300px">
+                <h4 class="title img_space"><a href="">Data Science Salary Projection</a></h4>
+                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/Tshepo-Elifa-Serumula/ds_salary_proj" class="submit"><b>Review</b></a></button>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-aos="fade-up">
             <div class="card review">
               <div class="card-body">
-                <img src="assets/img/maven_mart.png" alt="" height="300px" width="300px">
-                <h4 class="title img_space"><a href="">Maven Mart Sales Analytics</a></h4>
-                <button class="btn btn-primary see_more" type="submit"><a href="https://app.powerbi.com/links/EcuzGQdL1K?ctid=37fd5b81-9457-4d9c-b98d-4870504edf8a&pbi_source=linkShare&bookmarkGuid=b49f0420-2097-44a7-be6a-9f2e489b4f84" class="submit"><b>Review</b></a></button>
+                <img src="assets/img/Breast.png" alt="" height="300px" width="300px">
+                <h4 class="title img_space"><a href="">Breast Cancer Prediction</a></h4>
+                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/Tshepo-Elifa-Serumula/Data-Science-Projects/tree/main/Breast%20Cancer%20Prediction" class="submit"><b>Review</b></a></button>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-aos="fade-up">
             <div class="card review">
               <div class="card-body">
-                <img src="assets/img/us_airlines_delay.jpg" alt="" height="300px" width="300px">
-                <h4 class="title img_space"><a href="">US Domestic Airlines' Flights Delay Analysis</a></h4>
-                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/SayamAlt/US-Domestic-Airlines-Performance-Analysis" class="submit"><b>Review</b></a></button>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-4 col-md-6" data-aos="fade-up">
-            <div class="card review">
-              <div class="card-body">
-                <img src="assets/img/uk banks.png" alt="" height="300px" width="300px">
-                <h4 class="title img_space"><a href="">UK Banks' Customers Storyline</a></h4>
-                <button class="btn btn-primary see_more" type="submit"><a href="https://public.tableau.com/app/profile/sayam.kumar3450/viz/UKBanksCustomersStoryline/UKBanksCustomersStoryline" class="submit"><b>Review</b></a></button>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6" data-aos="fade-up">
-            <div class="card review">
-              <div class="card-body">
-                <img src="assets/img/wer.jpg" alt="" height="300px" width="300px">
-                <h4 class="title img_space"><a href="">World Happiness Analytics Report</a></h4>
-                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/SayamAlt/World-Happiness-Report-Analysis/tree/main" class="submit"><b>Review</b></a></button>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-6" data-aos="fade-up">
-            <div class="card review">
-              <div class="card-body">
-                <img src="assets/img/fake_reviews_detection.png" alt="" height="300px" width="300px">
-                <h4 class="title img_space"><a href="">Fake Reviews Detection</a></h4>
-                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/SayamAlt/Fake-Reviews-Detection" class="submit"><b>Review</b></a></button>
+                <img src="assets/img/Diamond.jpg" alt="" height="300px" width="300px">
+                <h4 class="title img_space"><a href="">Diamond Price Prediction</a></h4>
+                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/Tshepo-Elifa-Serumula/Data-Science-Projects/tree/main/Diamond%20Price%20Prediction" class="submit"><b>Review</b></a></button>
               </div>
             </div>
           </div>
@@ -505,27 +445,27 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up">
             <div class="card review">
               <div class="card-body">
-                <img src="assets/img/prostate_cancer.jpg" alt="" height="300px" width="300px">
-                <h4 class="title img_space"><a href="">Prostate Cancer Prediction</a></h4>
-                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/SayamAlt/Prostate-Cancer-Predictions" class="submit"><b>Review</b></a></button>
+                <img src="assets/img/Heart.png" alt="" height="300px" width="300px">
+                <h4 class="title img_space"><a href="">Heart Stroke Prediction</a></h4>
+                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/Tshepo-Elifa-Serumula/Data-Science-Projects/tree/main/Heart%20Stroke%20Prediction" class="submit"><b>Review</b></a></button>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-aos="fade-up">
             <div class="card review">
               <div class="card-body">
-                <img src="assets/img/car_price.png" alt="" height="300px" width="300px">
-                <h4 class="title img_space"><a href="">Car Price Prediction</a></h4>
-                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/SayamAlt/Car-Price-Prediction" class="submit"><b>Review</b></a></button>
+                <img src="assets/img/House.jpg" alt="" height="300px" width="300px">
+                <h4 class="title img_space"><a href="">House Price Prediction</a></h4>
+                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/Tshepo-Elifa-Serumula/Data-Science-Projects/tree/main/House%20Price%20Prediction" class="submit"><b>Review</b></a></button>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-aos="fade-up">
             <div class="card review">
               <div class="card-body">
-                <img src="assets/img/lead_scoring.png" alt="" height="300px" width="300px">
-                <h4 class="title img_space"><a href="">Lead Scoring Predictive Analytics</a></h4>
-                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/SayamAlt/Fake-Reviews-Detection" class="submit"><b>Review</b></a></button>
+                <img src="assets/img/Medical.jpeg" alt="" height="300px" width="300px">
+                <h4 class="title img_space"><a href="">Medical Cost Prediction</a></h4>
+                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/Tshepo-Elifa-Serumula/Data-Science-Projects/tree/main/Medical%20Cost%20Prediction" class="submit"><b>Review</b></a></button>
               </div>
             </div>
           </div>
@@ -535,18 +475,78 @@
           <div class="col-lg-4 col-md-6" data-aos="fade-up">
             <div class="card review">
               <div class="card-body">
-                <img src="assets/img/loan_default.png" alt="" height="300px" width="300px">
-                <h4 class="title img_space"><a href="">Loan Default Prediction</a></h4>
-                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/SayamAlt/Loan-Default-Prediction" class="submit"><b>Review</b></a></button>
+                <img src="assets/img/Wine.jpg" alt="" height="300px" width="300px">
+                <h4 class="title img_space"><a href="">Red Wine Quality</a></h4>
+                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/Tshepo-Elifa-Serumula/Data-Science-Projects/tree/main/Red%20Wine%20Quality" class="submit"><b>Review</b></a></button>
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-6" data-aos="fade-up">
             <div class="card review">
               <div class="card-body">
-                <img src="assets/img/semantic_similarity.png" alt="" height="300px" width="300px">
-                <h4 class="title img_space"><a href="">Semantic Similarity Quantification of Two Text Documents</a></h4>
-                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/SayamAlt/Text-Similarity-Quantifier" class="submit"><b>Review</b></a></button>
+                <img src="assets/img/occupancy.png" alt="" height="300px" width="300px">
+                <h4 class="title img_space"><a href="">Room Occupancy Detection</a></h4>
+                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/Tshepo-Elifa-Serumula/Data-Science-Projects/tree/main/Room%20Occupancy%20Detection" class="submit"><b>Review</b></a></button>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6" data-aos="fade-up">
+            <div class="card review">
+              <div class="card-body">
+                <img src="assets/img/Sleep.jpg" alt="" height="300px" width="300px">
+                <h4 class="title img_space"><a href="">Sleep Disorder Prediction</a></h4>
+                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/Tshepo-Elifa-Serumula/Data-Science-Projects/tree/main/Sleep%20Disorder%20Prediction" class="submit"><b>Review</b></a></button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-4 col-md-6" data-aos="fade-up">
+            <div class="card review">
+              <div class="card-body">
+                <img src="assets/img/Titanic.jpg" alt="" height="300px" width="300px">
+                <h4 class="title img_space"><a href="">Titanic Survival Prediction</a></h4>
+                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/Tshepo-Elifa-Serumula/Data-Science-Projects/tree/main/Titanic%20Survival%20Prediction" class="submit"><b>Review</b></a></button>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6" data-aos="fade-up">
+            <div class="card review">
+              <div class="card-body">
+                <img src="assets/img/Credit_Score.jpg" alt="" height="300px" width="300px">
+                <h4 class="title img_space"><a href="">Credit Score Classification</a></h4>
+                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/Tshepo-Elifa-Serumula/Machine-Learning-Projects/tree/main/Credit%20Score%20Classification" class="submit"><b>Review</b></a></button>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6" data-aos="fade-up">
+            <div class="card review">
+              <div class="card-body">
+                <img src="assets/img/Food_Delivery.jpg" alt="" height="300px" width="300px">
+                <h4 class="title img_space"><a href="">Food Delivery Time Prediction</a></h4>
+                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/Tshepo-Elifa-Serumula/Machine-Learning-Projects/tree/main/Food%20Delivery%20Time%20Prediction%20using%20Python" class="submit"><b>Review</b></a></button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-4 col-md-6" data-aos="fade-up">
+            <div class="card review">
+              <div class="card-body">
+                <img src="assets/img/News.jpeg" alt="" height="300px" width="300px">
+                <h4 class="title img_space"><a href="">Predicting The Popularity Of Online News Articles</a></h4>
+                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/Tshepo-Elifa-Serumula/Machine-Learning-Projects/tree/main/Random_Forest_Project_Predicting_Popularity_of_Online_News_Articles" class="submit"><b>Review</b></a></button>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 col-md-6" data-aos="fade-up">
+            <div class="card review">
+              <div class="card-body">
+                <img src="assets/img/War.png" alt="" height="300px" width="300px">
+                <h4 class="title img_space"><a href="">Ukraine Russia War Twitter Sentiment Analysis</a></h4>
+                <button class="btn btn-primary see_more" type="submit"><a href="https://github.com/Tshepo-Elifa-Serumula/Machine-Learning-Projects/tree/main/Ukraine%20Russia%20War%20Twitter%20Sentiment%20Analysis%20using%20Python" class="submit"><b>Review</b></a></button>
               </div>
             </div>
           </div>
