--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
       <h1>Tshepo Serumula</h1>
       <p>I'm a <span class="typed" data-typed-items="Data Scientist"></span></p>
     </div>
+    I am a data scientist
   </section><!-- End Hero -->
 
   <main id="main">
