Made few editions and fixed mistakes

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>16 Jul 1998</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+27 727910473</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Pretoria</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Country:</strong> <span>Gauteng</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Country:</strong> <span>South Africa</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -280,7 +280,7 @@
             <div class="resume-item">
               <h4>Data Scientist</h4>
               <h5>Jul 2023 - Aug 2021</h5>
-              <p><strong><em>BIS Data scientist</em></strong></p>
+              <p><strong><em>Wits University</em></strong></p>
               <h5>Vacation Work</h5>
               <ul>
                 <li>Cleaned all the datasets systematically and prepared them for analysis</li>
@@ -319,7 +319,7 @@
             <div class="resume-item">
               <h4>Codsoft Machine Learning Intern</h4>
               <h5>Aug 2023 - Sep 2023</h5>
-              <p><strong><em>iNeuron Technologies Private Limited</em></strong></p>
+              <p><strong><em>Codsoft</em></strong></p>
               <ul>
                 <li>Selected and created relevant features (input variables) from the raw data to improve the performance of machine learning models</li>
                 <!-- <li>Allocated tasks and responsibilities to each team member.</li> -->
@@ -616,7 +616,7 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="600">
             <div class="icon"><i class="bi bi-calendar4-week"></i></div>
             <h4 class="title"><a href="">Model Deployment</a></h4>
-            <p class="description">Capable of establishing exemplary web applications using Flask framework by leveraging and deploying machine learning models and algorithms for performing predictions.</p>
+            <p class="description">Capable of establishing exemplary web applications using Flask and Streamlit framework by leveraging and deploying machine learning models and algorithms for performing predictions.</p>
           </div>
         </div>
 
